--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,66 @@
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-family: 'Raleways', Arial, Helvetica, sans-serif;
+}
+
+body{
+    min-width: 100vw;
+    min-height: 100vh;
+    background-image: url(../images/bg-desktop.png);
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container{
+    display: flex;
+}
+
+.box-1{
+    width: 180px;
+    height: 100px;
+    background-color:hsl(228, 56%, 26%);
+    border-radius: 5px;
+    border-top-right-radius: 50px;
+}
+
+.content{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px;
+}
+
+.content .logo img{
+    width: 65px;
+    height: auto;
+}
+
+.icons{
+    width: 80px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.icon{
+    width: 20px;
+    height: 20px;
+    border-radius: 5px;
+    background-color: hsl(229, 57%, 11%);
+    display: flex;
+    justify-content: center;
+    align-items: center ;
+}
+
+.icon img{
+    width: 10px;
+    height: auto;
+}
 
 
 
