--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body{
 
 section{
     width: 100vw;
-    height: 100vh;
+    height: calc(100vh - 13px);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -27,8 +27,8 @@ section{
 }
 
 .box-1{
-    width: 180px;
-    height: 100px;
+    width: 200px;
+    height: 120px;
     background-color:hsl(228, 56%, 26%);
     border-radius: 5px;
     border-top-right-radius: 50px;
@@ -38,24 +38,24 @@ section{
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 20px;
 }
 
 .box-1 .content .logo img{
-    width: 65px;
+    width: 75px;
     height: auto;
 }
 
 .box-1 .icons{
-    width: 80px;
+    width: 110px;
     display: flex;
     justify-content: space-between;
 }
 
 .box-1 .icon{
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
     border-radius: 5px;
     background-color: hsl(229, 57%, 11%);
     display: flex;
@@ -64,7 +64,7 @@ section{
 }
 
 .box-1 .icon img{
-    width: 10px;
+    width: 15px;
     height: auto;
 }
 
@@ -72,8 +72,8 @@ section{
 
 
 .box-2{
-    width: 250px;
-    height: 70px;
+    width: 270px;
+    height: 90px;
     margin-left: 20px;
     border-radius: 5px;
     background-color: hsl(228, 56%, 26%);
@@ -82,13 +82,13 @@ section{
 
 .bytes-remaining{
     position: absolute;
-    width: 70px;
-    height: 30px;
+    width: 80px;
+    height: 35px;
     border-radius: 5px;
     background-color: #fff;
-    top: -21px;
-    right: 15px;
-    font-size: 5px;
+    top: -24px;
+    right: 20px;
+    font-size: 6px;
     text-transform: uppercase;
     display: flex;
     align-items: center;
@@ -97,7 +97,7 @@ section{
 
 .bytes-remaining span{
     font-weight: 700;
-    font-size: 15px;
+    font-size: 17px;
     margin: 5px;
 }
 
@@ -118,7 +118,7 @@ section{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 10px;
+    padding: 20px;
 
 }
 
@@ -137,7 +137,7 @@ section{
     width: 100%;
     height: 10px;
     border-radius: 5px;
-    margin: 5px 0px;
+    margin: 8px 0px;
     background-color: hsl(229, 57%, 11%); 
 }
 
@@ -167,7 +167,6 @@ section{
 
 
 
-
 .attribution {
      font-size: 11px;
      text-align: center;
@@ -176,4 +175,75 @@ section{
  .attribution a {
      color: hsl(228, 45%, 44%);
  }
+
+
+   @media (max-width: 500px) {
+       .container {
+           margin: 10px;
+           align-items: flex-end;
+           justify-content: center;
+           width: 480px;
+       }
+
+       .box-1 {
+           width: 60%;
+           height: auto;
+           margin-right: 10px;
+       }
+
+       .box-2 {
+           width: 80%;
+           height: auto;
+           margin: 0;
+       }
+   }
+
+
+ @media (max-width: 375px){
+    body{
+        background-image: url(../images/bg-mobile.png);
+    }
+
+    .container{
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 20px;
+        width: 250px;
+    }
+
+    .box-1{
+        width: 90%;
+        height: auto;
+        margin-bottom: 10px;
+    }
+
+    .box-1 .content {
+        width: auto;
+        height: 110px;
+        justify-content: space-between;
+    }
+
+    .box-2{
+        width: 90%;
+        height: auto;
+        margin: 0;
+    }
+
+    .box-2 .content h1{
+        text-align: center;
+    }
+
+    .bytes-remaining{
+        position: absolute;
+        top: auto;
+        bottom: -17px;
+        left: 30%;
+        right: 30%;
+    }
+
+    .bytes-remaining::after{
+        display: none;
+    }
+ }
+
 
