--- a/css/style.css
+++ b/css/style.css
@@ -206,7 +206,7 @@ section{
 
     .container{
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
         padding: 20px;
         width: 250px;
     }
@@ -215,6 +215,7 @@ section{
         width: 90%;
         height: auto;
         margin-bottom: 10px;
+        margin-right: 0;
     }
 
     .box-1 .content {
